[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.0.0"
keep-alive = "^0.0.1"
discord-command = "^0.0.2"
python-dotenv = "^0.21.0"
jdatetime = "^4.1.0"
pytz = "^2022.4"
requests = "^2.28.1"
aiohttp = "^3.8.3"
pyrandmeme = "^0.0.6"
giphy_client = "^1.0.0"
google = "^3.0.0"
beautifulsoup4 = "^4.11.1"
keepalive = "^0.5"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"